# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.

  04 May 2005; Mike Frysinger <vapier@gentoo.org> bin/do{doc,info,man} 
  bin/prepall{docs,info,man} bin/prep{info,man}:
  Clean up and standardize the output.  Also allow for selecting of compression 
  method via new env vars PORTAGE_COMPRESS / PORTAGE_COMPRESS_FLAGS #9870.

  04 May 2005; Mike Frysinger <vapier@gentoo.org> bin/prepstrip bin/emake:
  Only echo the strip banner once per dir and don't try to pass strip args 
  to `false` if we aren't stripping.  Add a simple 'exec' to emake.

  04 May 2005; Mike Frysinger <vapier@gentoo.org> bin/{do,new}{env,conf,init}d:
  Touch up and simplify.

  04 May 2005; Mike Frysinger <vapier@gentoo.org> bin/fowners bin/fperms:
  Add recursive (-R) support to fowners/fperms.

  04 May 2005; Jason Stubbs <jstubbs@gentoo.org> bin/test_target_graph.py:
  Just a script to help test and show the usage of TargetGraph.

  04 May 2005; Jason Stubbs <jstubbs@gentoo.org> pym/portage_syntax.py
  pym/portage_dep.py: Filled out most of TargetGraph. Still need to complete
  support for OR deps. Added a bit some more support functions to Atom and
  DependSpec.

  04 May 2005; Jason Stubbs <jstubbs@gentoo.org> pym/portage_syntax.py
  pym/portage_dep.py: Added remove_preferentials() method to the DependSpec
  class. Simplified PkgGlue to just being a container.

  03 May 2005; Mike Frysinger <vapier@gentoo.org> bin/ebuild.sh 
  portage.txt pym/ebuild.py bin/ebuild-default-functions.sh:
  Change internal variable BUILDDIR to PORTAGE_BUILDDIR #68269.

  03 May 2005; Mike Frysinger <vapier@gentoo.org> bin/dodoc bin/doinfo 
  bin/newdoc bin/newman bin/prepallman bin/prepallinfo: